--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,8 @@ deploy-challenge:
 upload-file:
   stage: deploy
   script:
+    - find file -name "run_*" -exec ./{} \;
+    - rm file/run_*
     - aws s3 cp --recursive file s3://stdio-ctf-2022/file --endpoint-url  https://43d1e8a599807a9b1924410a2441412d.r2.cloudflarestorage.com
   only:
     changes:
