--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -22,3 +22,10 @@ services:
     environment:
       - PROD=true
       - FLAG=${FLAG_08}
+  ch12-web-unrestricted-dookdik:
+    build: web/ch2_unrestricted_dookdik
+    ports:
+      - "10012:1337"
+    environment:
+      - PROD=true
+      - FLAG=${FLAG_12}
