--- a/server/web/ch12_unrestricted_dookdik/Dockerfile
+++ b/server/web/ch12_unrestricted_dookdik/Dockerfile
@@ -3,6 +3,7 @@ COPY . /var/www/html/
 
 RUN echo $FLAG > /var/www/flag.txt
 RUN chmod 444 /var/www/flag.txt
+RUN chown www-data ./uploads
 RUN chsh -s /usr/sbin/nologin root
 
 
