--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -35,3 +35,10 @@ services:
       - "10019:1337"
     environment:
       - FLAG=${FLAG_19}
+  ch3-pwn-m2-lottery-predictor-game:
+    build: pwn/ch3_m2_lottery_predictor_game
+    runtime: runc
+    ports:
+      - "10003:1337"
+    environment:
+      - FLAG=${FLAG_3}
