--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -53,3 +53,24 @@ services:
       - "10003:1337"
     environment:
       - FLAG=${FLAG_3}
+  ch1-pwn-m1-pwn_bankde_fc:
+    build: pwn/ch1_m1_pwn_bankde_fc
+    runtime: runc
+    ports:
+      - "10001:1337"
+    environment:
+      - FLAG=${FLAG_1}
+  ch2-pwn-m3-pwn_super_guesser:
+    build: pwn/ch2_m3_super_guesser
+    runtime: runc
+    ports:
+      - "10001:1337"
+    environment:
+      - FLAG=${FLAG_2}
+  ch4-pwn-m4-pwn_super_guesser_v2:
+    build: pwn/ch4_m4_super_guesser_v2
+    runtime: runc
+    ports:
+      - "10001:1337"
+    environment:
+      - FLAG=${FLAG_4}
