--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -34,11 +34,11 @@ services:
       - "10014:8000"
     environment:
       - PROD=true
-      - SECRET_KEY=${14_SECRET_KEY}
-      - ADMIN_PASSWORD=${14_ADMIN_PASSWORD}
+      - SECRET_KEY=${c14_SECRET_KEY}
+      - ADMIN_PASSWORD=${c14_ADMIN_PASSWORD}
       - CTF_FLAG=${FLAG_14}
-      - CAPTCHA_SITE_KEY=${14_CAPTCHA_SITE_KEY}
-      - CAPTCHA_SECRET_KEY=${14_CAPTCHA_SECRET_KEY}
+      - CAPTCHA_SITE_KEY=${c14_CAPTCHA_SITE_KEY}
+      - CAPTCHA_SECRET_KEY=${c14_CAPTCHA_SECRET_KEY}
   ch19-misc-pyrun:
     build: misc/ch19_pyrun
     runtime: runc
