Add variable check in main pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,10 @@ deploy-challenge:
     - cd server
     - docker-compose up --force-recreate --build -d
   only:
+    variables:
+      - $RESET_CHALL == null
+      - $START_CHALL == null
+      - $STOP_CHALL == null
     changes:
       - server/**/*
 
@@ -18,6 +22,10 @@ upload-file:
     - rm file/run_*
     - aws s3 cp --recursive file s3://stdio-ctf-2022/file --endpoint-url https://43d1e8a599807a9b1924410a2441412d.r2.cloudflarestorage.com
   only:
+    variables:
+      - $RESET_CHALL == null
+      - $START_CHALL == null
+      - $STOP_CHALL == null
     changes:
       - file/**/*
 
