--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -54,6 +54,15 @@ services:
       - "10019:1337"
     environment:
       - FLAG=${FLAG_19}
+  ch20-misc-lotteryv2:
+    build: misc/ch20_lottery_v2
+    ports:
+      - "10014:1337"
+    environment:
+      - PROD=true
+      - CTF_FLAG=${FLAG_20}
+      - CAPTCHA_SITE_KEY=${c14_CAPTCHA_SITE_KEY}
+      - CAPTCHA_SECRET_KEY=${c14_CAPTCHA_SECRET_KEY}
   ch21-misc-secret-shop:
     build: misc/ch21_secret_shop
     runtime: runc
