ch14 - rename ch folder

--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -37,7 +37,7 @@ services:
       - PORT=1337
       - COOKIE_SECRET=${c13_COOKIE_SECRET}
   ch14-web-m3-xss2sqli:
-    build: web/ch14_m3_xss2sqli
+    build: web/ch14_m3_semi_sec_app
     ports:
       - "10014:8000"
     environment:
